Latest updates, pre first user test
Fashion turned on for multi-item search. Search more robust RE slow
page loads etc. Groceries turned on. Tested with more products
(Birdsong, Karma, Po Zu, Brothers We Stand)

--- a/css/app-icons.css
+++ b/css/app-icons.css
@@ -38,6 +38,8 @@ accountLinkIcon:hover, accountLinkIcon:focus, .accountLinkIcon:hover, .accountLi
 .addNewIcon {
     font-size: 40px;
     color: orange;
+    text-shadow: 1px 4px 6px #FFF,0 0 0 #000,1px 4px 6px #FFF;
+    vertical-align: middle;
 }
 
 
