--- a/css/app.css
+++ b/css/app.css
@@ -7,6 +7,8 @@
 }
 .iframeBody {
   height: 99%; /* prevents scroll bar appearing until needed */
+  width: 99%;
+  background-color: #f7f9f9;
 }
 
 .popupBody {
