--- a/css/app.css
+++ b/css/app.css
@@ -197,3 +197,26 @@
     -webkit-animation-iteration-count:  infinite;
     -webkit-animation-timing-function:  linear;
 }
+
+.banner_container {
+    margin-left: 8px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.banner {
+    border-style: solid;
+    border-width: 1px;
+    border-color: red;
+    text-align: center;
+}
+
+.banner_link {
+    color: #0066ba;
+    font-weight: bold;
+}
+
+.morePlus {
+    font-size: 10px;
+    color: #D2691E;
+}
