--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,16 @@
 /********
  * Body *
  ********/
+
+ .testFeedbackContainer {
+     position: fixed;
+     bottom: 0px;
+ }
+
+.testFeedbackText {
+    font-size: 9px;
+}
+
 .brandSpielToolTips {width: 250px}
 .custom .joyride-nub {
     visibility: hidden;
