--- a/css/app-icons.css
+++ b/css/app-icons.css
@@ -93,3 +93,24 @@ accountLinkIcon:hover, accountLinkIcon:focus, .accountLinkIcon:hover, .accountLi
     font-size: 16px;
     color: blue;
 }
+.feedbackIcon {
+    font-size: 30px;
+    text-shadow: 1px 4px 6px #FFF,0 0 0 #000,1px 4px 6px #FFF;
+    vertical-align: middle;
+}
+.fi-page-delete {
+    color: red;
+}
+.fi-page-multiple {
+    color: orange;
+}
+.fi-check {
+    color: green;
+}
+
+.fi-arrow-down{
+    float: left;
+    font-size: 11px;
+    margin-bottom: 0px;
+    margin-left: 5px;
+}
