--- a/css/app.css
+++ b/css/app.css
@@ -12,6 +12,7 @@
 }
 
 .brandSpielToolTips {width: 250px}
+
 .custom .joyride-nub {
     visibility: hidden;
 }
@@ -27,6 +28,8 @@
     margin-right: 18px;
 
     min-width: 300px;
+
+    overflow: hidden;
 }
 .header {
     margin-left: 2px;
@@ -229,4 +232,62 @@
 .morePlus {
     font-size: 10px;
     color: #D2691E;
+}
+
+.sidebarFeedbackRow {
+  bottom: 20px;
+  position: fixed;
+  width: 100%;
+  height: 40px; /*63px;*/
+  margin-top: 5px;
+  padding-top: 5px;
+  background-color: #f7f9f9;
+}
+
+.popupFeedbackRow {
+  bottom: 25px;
+  position: fixed;
+  width: 100%;
+  height: 40px; /*63px;*/
+  margin-top: 5px;
+  padding-top: 5px;
+}
+
+.popupFeedbackRow_title {
+    bottom: 70px;
+    position: fixed;
+    width: 100%;
+    height: 10px; /*63px;*/
+    margin-top: 5px;
+    padding-top: 5px;
+    font-weight: bold;
+}
+
+.popupFeedbackRow_captions {
+    bottom: 20px;
+    position: fixed;
+    width: 100%;
+    height: 5px;
+    margin-top: 5px;
+    padding-top: 5px;
+    font-size: 9px;
+    font-style: italic;
+}
+
+.sidebarFeedbackColumn {
+    text-align: center;
+}
+
+.feedbackLink {
+    font-size: 10px;
+    color: darkblue;
+    display: none;
+}
+
+.feedbackTooltipHidden {
+    visibility: hidden;
+}
+
+.feedbackToolTips {
+    width: 120px
 }
